// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for headline 1`] = `
Object {
  "1": Object {
    "@media(min-width:1000px) and (max-width:1299px)": Object {
      "fontSize": "2.75rem",
      "lineHeight": 1.1818181818,
    },
    "@media(min-width:1300px) and (max-width:1759px)": Object {
      "fontSize": "3.25rem",
      "lineHeight": 1.2307692308,
    },
    "@media(min-width:1760px)": Object {
      "fontSize": "3.75rem",
      "lineHeight": 1.2,
    },
    "@media(min-width:760px) and (max-width:999px)": Object {
      "fontSize": "2.25rem",
      "lineHeight": 1.3333333333,
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.75rem",
    "fontWeight": 600,
    "lineHeight": 1.4285714286,
  },
  "2": Object {
    "@media(min-width:1000px) and (max-width:1299px)": Object {
      "fontSize": "2.25rem",
      "lineHeight": 1.3333333333,
    },
    "@media(min-width:1300px) and (max-width:1759px)": Object {
      "fontSize": "2.625rem",
      "lineHeight": 1.2380952381,
    },
    "@media(min-width:1760px)": Object {
      "fontSize": "3rem",
      "lineHeight": 1.25,
    },
    "@media(min-width:760px) and (max-width:999px)": Object {
      "fontSize": "1.875rem",
      "lineHeight": 1.3333333333,
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.5rem",
    "fontWeight": 600,
    "lineHeight": 1.5,
  },
  "3": Object {
    "@media(min-width:1000px) and (max-width:1299px)": Object {
      "fontSize": "1.75rem",
      "lineHeight": 1.4285714286,
    },
    "@media(min-width:1300px) and (max-width:1759px)": Object {
      "fontSize": "2rem",
      "lineHeight": 1.375,
    },
    "@media(min-width:1760px)": Object {
      "fontSize": "2.25rem",
      "lineHeight": 1.3333333333,
    },
    "@media(min-width:760px) and (max-width:999px)": Object {
      "fontSize": "1.5rem",
      "lineHeight": 1.5,
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.25rem",
    "fontWeight": 600,
    "lineHeight": 1.4,
  },
  "4": Object {
    "@media(min-width:1000px) and (max-width:1299px)": Object {
      "fontSize": "1.25rem",
      "lineHeight": 1.4,
    },
    "@media(min-width:1300px) and (max-width:1759px)": Object {
      "fontSize": "1.375rem",
      "lineHeight": 1.4545454545,
    },
    "@media(min-width:1760px)": Object {
      "fontSize": "1.5rem",
      "lineHeight": 1.5,
    },
    "@media(min-width:760px) and (max-width:999px)": Object {
      "fontSize": "1.125rem",
      "lineHeight": 1.5555555556,
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1rem",
    "fontWeight": 600,
    "lineHeight": 1.5,
  },
  "5": Object {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1rem",
    "fontWeight": 600,
    "lineHeight": 1.5,
  },
}
`;

exports[`should contain correct values for headline1 1`] = `
Object {
  "@media(min-width:1000px) and (max-width:1299px)": Object {
    "fontSize": "2.75rem",
    "lineHeight": 1.1818181818,
  },
  "@media(min-width:1300px) and (max-width:1759px)": Object {
    "fontSize": "3.25rem",
    "lineHeight": 1.2307692308,
  },
  "@media(min-width:1760px)": Object {
    "fontSize": "3.75rem",
    "lineHeight": 1.2,
  },
  "@media(min-width:760px) and (max-width:999px)": Object {
    "fontSize": "2.25rem",
    "lineHeight": 1.3333333333,
  },
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1.75rem",
  "fontWeight": 600,
  "lineHeight": 1.4285714286,
}
`;

exports[`should contain correct values for headline2 1`] = `
Object {
  "@media(min-width:1000px) and (max-width:1299px)": Object {
    "fontSize": "2.25rem",
    "lineHeight": 1.3333333333,
  },
  "@media(min-width:1300px) and (max-width:1759px)": Object {
    "fontSize": "2.625rem",
    "lineHeight": 1.2380952381,
  },
  "@media(min-width:1760px)": Object {
    "fontSize": "3rem",
    "lineHeight": 1.25,
  },
  "@media(min-width:760px) and (max-width:999px)": Object {
    "fontSize": "1.875rem",
    "lineHeight": 1.3333333333,
  },
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1.5rem",
  "fontWeight": 600,
  "lineHeight": 1.5,
}
`;

exports[`should contain correct values for headline3 1`] = `
Object {
  "@media(min-width:1000px) and (max-width:1299px)": Object {
    "fontSize": "1.75rem",
    "lineHeight": 1.4285714286,
  },
  "@media(min-width:1300px) and (max-width:1759px)": Object {
    "fontSize": "2rem",
    "lineHeight": 1.375,
  },
  "@media(min-width:1760px)": Object {
    "fontSize": "2.25rem",
    "lineHeight": 1.3333333333,
  },
  "@media(min-width:760px) and (max-width:999px)": Object {
    "fontSize": "1.5rem",
    "lineHeight": 1.5,
  },
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1.25rem",
  "fontWeight": 600,
  "lineHeight": 1.4,
}
`;

exports[`should contain correct values for headline4 1`] = `
Object {
  "@media(min-width:1000px) and (max-width:1299px)": Object {
    "fontSize": "1.25rem",
    "lineHeight": 1.4,
  },
  "@media(min-width:1300px) and (max-width:1759px)": Object {
    "fontSize": "1.375rem",
    "lineHeight": 1.4545454545,
  },
  "@media(min-width:1760px)": Object {
    "fontSize": "1.5rem",
    "lineHeight": 1.5,
  },
  "@media(min-width:760px) and (max-width:999px)": Object {
    "fontSize": "1.125rem",
    "lineHeight": 1.5555555556,
  },
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1rem",
  "fontWeight": 600,
  "lineHeight": 1.5,
}
`;

exports[`should contain correct values for headline5 1`] = `
Object {
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1rem",
  "fontWeight": 600,
  "lineHeight": 1.5,
}
`;

exports[`should contain correct values for text 1`] = `
Object {
  "large": Object {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "2.25rem",
    "fontWeight": 400,
    "lineHeight": 1.3333333333,
  },
  "medium": Object {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.5rem",
    "fontWeight": 400,
    "lineHeight": 1.5,
  },
  "small": Object {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1rem",
    "fontWeight": 400,
    "lineHeight": 1.5,
  },
  "xLarge": Object {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "3.25rem",
    "fontWeight": 400,
    "lineHeight": 1.2307692308,
  },
  "xSmall": Object {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "0.75rem",
    "fontWeight": 400,
    "lineHeight": 1.6666666667,
  },
}
`;

exports[`should contain correct values for textLarge 1`] = `
Object {
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "2.25rem",
  "fontWeight": 400,
  "lineHeight": 1.3333333333,
}
`;

exports[`should contain correct values for textMedium 1`] = `
Object {
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1.5rem",
  "fontWeight": 400,
  "lineHeight": 1.5,
}
`;

exports[`should contain correct values for textSmall 1`] = `
Object {
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "1rem",
  "fontWeight": 400,
  "lineHeight": 1.5,
}
`;

exports[`should contain correct values for textXLarge 1`] = `
Object {
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "3.25rem",
  "fontWeight": 400,
  "lineHeight": 1.2307692308,
}
`;

exports[`should contain correct values for textXSmall 1`] = `
Object {
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "0.75rem",
  "fontWeight": 400,
  "lineHeight": 1.6666666667,
}
`;

exports[`should contain correct values for title 1`] = `
Object {
  "large": Object {
    "@media(min-width:1000px) and (max-width:1299px)": Object {
      "fontSize": "3.25rem",
      "lineHeight": 1.2307692308,
    },
    "@media(min-width:1300px) and (max-width:1759px)": Object {
      "fontSize": "3.875rem",
      "lineHeight": 1.2258064516,
    },
    "@media(min-width:1760px)": Object {
      "fontSize": "4.5rem",
      "lineHeight": 1.2222222222,
    },
    "@media(min-width:760px) and (max-width:999px)": Object {
      "fontSize": "2.625rem",
      "lineHeight": 1.2380952381,
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "2rem",
    "fontWeight": 600,
    "lineHeight": 1.375,
  },
}
`;

exports[`should contain correct values for titleLarge 1`] = `
Object {
  "@media(min-width:1000px) and (max-width:1299px)": Object {
    "fontSize": "3.25rem",
    "lineHeight": 1.2307692308,
  },
  "@media(min-width:1300px) and (max-width:1759px)": Object {
    "fontSize": "3.875rem",
    "lineHeight": 1.2258064516,
  },
  "@media(min-width:1760px)": Object {
    "fontSize": "4.5rem",
    "lineHeight": 1.2222222222,
  },
  "@media(min-width:760px) and (max-width:999px)": Object {
    "fontSize": "2.625rem",
    "lineHeight": 1.2380952381,
  },
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": "2rem",
  "fontWeight": 600,
  "lineHeight": 1.375,
}
`;
